# On-Boarding-Dashboard

./: README.md  easyid.html  index.html  itinerary.html
easyid/: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
easyid/.github/: dependabot.yml  pull_request_template.md
easyid/.github/workflows/: ci.yml
easyid/apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
easyid/apps/api/alembic/: env.py  script.py.mako
easyid/apps/api/alembic/versions/: 9db3d4d8d143_fnd003_persistence_baseline.py
easyid/apps/api/src/easyid_api/: __init__.py  config.py  main.py
easyid/apps/api/src/easyid_api/api/: __init__.py  deps.py  errors.py
easyid/apps/api/src/easyid_api/api/v1/: health.py  router.py
easyid/apps/api/src/easyid_api/application/: __init__.py  errors.py  ports.py  unit_of_work.py
easyid/apps/api/src/easyid_api/application/commands/: __init__.py  command.py  handler.py
easyid/apps/api/src/easyid_api/application/ports/: __init__.py  health.py  repository.py  unit_of_work.py
easyid/apps/api/src/easyid_api/application/queries/: __init__.py  handler.py  query.py
easyid/apps/api/src/easyid_api/bootstrap/: __init__.py  container.py  ids.py  lifespan.py  logging.py  middleware.py  request_context.py  tenant_context.py
easyid/apps/api/src/easyid_api/domain/: __init__.py
easyid/apps/api/src/easyid_api/infrastructure/: __init__.py
easyid/apps/api/src/easyid_api/infrastructure/db/: __init__.py  base.py  engine.py  session.py
easyid/apps/api/src/easyid_api/infrastructure/identity/: __init__.py
easyid/apps/api/src/easyid_api/infrastructure/messaging/: __init__.py
easyid/apps/api/src/easyid_api/infrastructure/observability/: __init__.py
easyid/apps/api/src/easyid_api/infrastructure/persistence/: __init__.py  base.py  engine.py  health.py  ids.py  metadata.py  mixins.py  session.py  unit_of_work.py
easyid/apps/api/src/easyid_api/infrastructure/persistence/mappings/: __init__.py
easyid/apps/api/src/easyid_api/infrastructure/persistence/repositories/: __init__.py  base.py
easyid/apps/api/src/easyid_api/infrastructure/storage/: __init__.py
easyid/apps/api/tests/: conftest.py  test_application_errors.py  test_application_foundation.py  test_exceptions.py  test_health.py  test_persistence.py  test_request_context.py  test_startup.py  test_tenant_context.py
easyid/apps/web/: .dockerignore  .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
easyid/apps/web/e2e/: home.spec.ts
easyid/apps/web/src/: env.ts
easyid/apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
easyid/apps/web/src/components/: health-check.tsx
easyid/docs/: architecture.md  contributing.md  deployment.md  development.md  getting-started.md
easyid/docs/adr/: 0001-consolidate-domain-into-packages-domain.md  0002-introduce-packages-common.md  0003-domain-is-a-python-package.md  0004-bootstrap-tenancy-infrastructure-shape.md  0005-fnd-002-bootstrap-without-persistence-tenancy.md  0006-persistence-foundation.md  0007-domain-kernel.md  README.md  template.md
easyid/infrastructure/docker/: README.md
easyid/infrastructure/docker/postgres/init/: 01-extensions.sql
kyc-platform/: README.md  package-lock.json  package.json
kyc-platform/desktop-shortcut/: README.md  install-desktop-shortcut.ps1  install-desktop-shortcut.sh  uninstall-desktop-shortcut.ps1  uninstall-desktop-shortcut.sh
kyc-platform/desktop-shortcut/launchers/: Launch Sentinel.bat  Launch Sentinel.command  launch-sentinel.sh  sentinel.desktop.template
kyc-platform/src/app/: globals.css  layout.tsx
kyc-platform/src/app/(app)/: layout.tsx  page.tsx
kyc-platform/src/app/(app)/clients/: clients-list-screen.tsx  page.tsx
kyc-platform/src/app/(app)/clients/[id]/: client-detail-screen.tsx  page.tsx
kyc-platform/src/app/(app)/clients/[id]/analysis/: analysis-screen.tsx  page.tsx
kyc-platform/src/app/(app)/clients/[id]/officer/: officer-screen.tsx  page.tsx
kyc-platform/src/app/(app)/clients/[id]/report/: page.tsx  report-screen.tsx
kyc-platform/src/app/(app)/clients/[id]/upload/: page.tsx  upload-screen.tsx
kyc-platform/src/app/(app)/clients/new/: create-client-screen.tsx  page.tsx
kyc-platform/src/app/(app)/dashboard/: dashboard-screen.tsx
kyc-platform/src/app/(app)/insights/: page.tsx
kyc-platform/src/app/(app)/policies/: page.tsx
kyc-platform/src/app/(app)/reviews/: page.tsx
kyc-platform/src/app/(app)/settings/: page.tsx
kyc-platform/src/app/(app)/support/: page.tsx
kyc-platform/src/components/: coming-soon.tsx  risk-pill.tsx  status-pill.tsx  theme-provider.tsx  theme-toggle.tsx
kyc-platform/src/components/brand/: logo.tsx
kyc-platform/src/components/layout/: page-header.tsx  sidebar.tsx  topbar.tsx
kyc-platform/src/components/onboarding/: document-dropzone.tsx  step-indicator.tsx
kyc-platform/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  skeleton.tsx  tabs.tsx  tooltip.tsx
kyc-platform/src/components/viz/: kbd.tsx  sparkline.tsx
kyc-platform/src/lib/: ai.ts  document-schema.ts  insights.ts  reviewers.ts  seed.ts  store.tsx  types.ts  utils.ts
