[project]
name = "easyid-api"
version = "0.1.0"
description = "easyID API — FastAPI service."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
authors = [{ name = "easyID" }]

dependencies = [
    # Domain layer (shared Python package — see packages/domain)
    "easyid-domain",
    # Web framework
    "fastapi[standard]>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    # Config
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    # Persistence
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Observability
    "structlog>=24.4.0",
]

[tool.uv.sources]
# Path dependency (non-editable). Keeps the Docker runtime image simple —
# the wheel is installed into the venv rather than linked back to the source
# tree. Re-run `uv sync` from apps/api after changing packages/domain.
easyid-domain = { path = "../../packages/domain" }

[dependency-groups]
dev = [
    # Test
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    # Lint / format / type
    "ruff>=0.8.4",
    "mypy>=1.14.0",
    # Types
    "types-passlib>=1.7.7.20241221",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easyid_api"]

# ---------- Ruff -----------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "A",   # builtins
    "C4",  # comprehensions
    "SIM", # simplify
    "PL",  # pylint
    "RUF", # ruff
]
ignore = [
    "PLR0913", # too many args — FastAPI dependencies inflate this
    "PLR2004", # magic values — pragmatic for status codes
    "PLW0603", # global mutation — legitimate for engine / sessionmaker caches
    "N999",    # module names — vendor names in Alembic revisions
    # Type-checking hoists — TC002 / TC003 add churn without value for a
    # FastAPI + Pydantic codebase where module-level imports are the norm.
    "TC001",
    "TC002",
    "TC003",
    "RUF100", # unused noqa — Ruff toggles rules across versions; false positives
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004"]
"alembic/env.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["easyid_api", "easyid_domain"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- mypy -----------------------------------------------------------
[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# ---------- Pytest ---------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running database",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
source = ["src/easyid_api"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
